# SWT_U_A3

./: HelloWorld.cpp.txt  HelloWorldGeaenderterName.cpp.txt
0xaLambda/0x0a/: CMakeLists.txt  README.md  a_lambda_01_sort.cpp  a_lambda_02_simple.cpp  a_lambda_03_functions.cpp  a_lambda_04_trapez.cpp  b_algorithms_01_nonmod.cpp  b_algorithms_02_mod.cpp  b_algorithms_03_sort.cpp  b_algorithms_04_numeric.cpp  c_stream_01_file_io.cpp  c_stream_02_string_io.cpp  d_link_01_extern.cpp  d_link_01_extern.hpp  d_link_01_main.cpp  sixlines.txt  sol_kreley.cpp  sol_pleim.cpp  sol_roarport.cpp  sol_smoothrock.cpp  sol_yrouwood.cpp  work_fileptr_io.cpp
0xbThreads/0x0b/: CMakeLists.txt  README.md  a_threads_01_two.cpp  a_threads_02_simple.cpp  a_threads_03_multiple.cpp  a_threads_04_array.cpp  a_threads_05_ref.cpp  b_mutex_01_lock.cpp  b_mutex_02_condition_var_nok.cpp  b_mutex_03_condition_var_ok.cpp  c_futures_01.cpp  c_futures_02.cpp  sol_coldwall.cpp  sol_deepbutter_v1.cpp  sol_deepbutter_v2.cpp  sol_westwheat_v2.cpp  ts.h
3class/0x03/: CMakeLists.txt  README.md  _Makefile  a_ctor_dtor.cpp  a_ctor_dtor_throw.cpp  b_getter_setter.cpp  c_const_getter.cpp  d_copyctor.cpp  e_class_address.cpp  f_class_address_best.cpp  sol_luckyrock.cpp  sol_meadowriver.cpp  sol_ravencastle.cpp  sol_stoneridge.cpp  work_class_car.cpp  work_class_ctor.cpp
4Container/0x04/: CMakeLists.txt  README.md  _Makefile  a_generics_01_vector.cpp  a_generics_02_pair_tuple.cpp  a_generics_03_container.cpp  a_generics_04_examples.cpp  b_iterators_01_examples_range_based_for.cpp  sol_ashfield.cpp  sol_bakeropolis.cpp  sol_brickgate.cpp  sol_hicksbluff.cpp  sol_oakberg.cpp  sol_sparrowtown.cpp
5ptr/0x05/: CMakeLists.txt  README.md  a_asm_01_local_vars.cpp  a_asm_02_local_addr.cpp  a_asm_03_call_by.cpp  b_pointer_01_memory_layout.cpp  b_pointer_02_math.cpp  b_pointer_03_array.cpp  b_pointer_04_multiple_params.cpp  b_pointer_05_swap.cpp  b_pointer_06_addon.cpp  b_pointer_07_illegal.cpp  sol_copperview.cpp  sol_kengate.cpp  sol_mcallenspring.cpp  work_ptr_endlist.cpp
6uniqueptrStackEtc/0x06/: CMakeLists.txt  README.md  a_new_01_new_delete.cpp  a_new_02_node.cpp  a_new_03_node_list.cpp  a_new_04_array.cpp  a_new_05_stack_example.cpp  a_new_06_unique_ptr.cpp  b_const_01_pointer.cpp  c_string_01_cstrings.cpp  c_string_02_class_example.cpp  sol_birdsgale.cpp  sol_greenmound.cpp  sol_kenford.cpp  sol_reedsfield.cpp  sol_rosepond_v2.cpp  sol_rosepond_v3.cpp  work_ptrptr.cpp  work_reserve.cpp
7static_operatoren/0x07/: CMakeLists.txt  README.md  a_lang_01_statics.cpp  a_lang_02_friend.cpp  a_lang_03_nodiscard.cpp  b_op_01_address.cpp  b_op_02_assign.cpp  b_op_03_plus_global.cpp  b_op_04_plus_member.cpp  b_op_05_brackets.cpp  b_op_06_inc.cpp  b_op_07_io.cpp  sol_deerwoods.cpp  sol_dovertown.cpp  sol_heartland.cpp  work_a_connection.cpp  work_a_connection.hpp  work_a_main.cpp  work_a_manager.cpp  work_a_manager.hpp
8virtuelvererbung/0x08/: CMakeLists.txt  README.md  a_polymorphie_01_novirtual.cpp  a_polymorphie_02_virtual.cpp  a_polymorphie_03_ab.cpp  b_abstract_01_report.cpp  b_abstract_02_clone.cpp  c_multiple_01_simple.cpp  c_multiple_02_diamond.cpp  sol_moorerock.cpp  sol_petersmines.cpp  sol_unionbeach_v3.cpp  work_windows.cpp
9template_smartptr_/0x09/: CMakeLists.txt  README.md  a_specialize_01_pair.cpp  a_specialize_02_type.cpp  a_specialize_03_vector.cpp  a_specialize_04_ispointer.cpp  a_specialize_05_metaprogramming.cpp  a_specialize_06_typename.cpp  b_smartptr_01_sharedptr.cpp  b_smartptr_02_weakptr.cpp  sol_banrockburn.cpp  sol_eastbourne.cpp  sol_openshaw.cpp  sol_wintervale.cpp  work_g_inverse.cpp
CppSnippets/: CppSnippets.sln
CppSnippets/CppSnippets/: CppSnippets.vcxproj  CppSnippets.vcxproj.filters  Datenstrukturen.h  Lambda.h  OperatorOverload.h  Quelle.cpp  Templates.h  Thread.h  enum.h  zeiger.h
CppSnippets/CppSnippets/x64/Debug/: CppSnippets.exe.recipe  CppSnippets.ilk  vc143.idb
CppSnippets/CppSnippets/x64/Debug/CppSnippets.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CppSnippets.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
