cmake_minimum_required(VERSION 3.15)
project(clion)

set(CMAKE_CXX_STANDARD 20)
add_executable(a_lambda_01_sort a_lambda_01_sort.cpp)
add_executable(a_lambda_02_simple a_lambda_02_simple.cpp)
add_executable(a_lambda_03_functions a_lambda_03_functions.cpp)
add_executable(a_lambda_04_trapez a_lambda_04_trapez.cpp)
add_executable(b_algorithms_01_nonmod b_algorithms_01_nonmod.cpp)
add_executable(b_algorithms_02_mod.cpp b_algorithms_02_mod.cpp)
add_executable(b_algorithms_03_sort b_algorithms_03_sort.cpp)
add_executable(b_algorithms_04_numeric b_algorithms_04_numeric.cpp)
add_executable(c_stream_01_file_io c_stream_01_file_io.cpp)
add_executable(c_stream_02_string_io c_stream_02_string_io.cpp)
add_executable(d_link_01_main d_link_01_main.cpp)

add_executable(work_fileptr_io work_fileptr_io.cpp)

add_executable(sol_kreley sol_kreley.cpp)
add_executable(sol_pleim sol_pleim.cpp)
add_executable(sol_roarport sol_roarport.cpp)
add_executable(sol_yrouwood sol_yrouwood.cpp)
add_executable(sol_smoothrock sol_smoothrock.cpp)

